--- a/lectures/04-safetyproofs.tex
+++ b/lectures/04-safetyproofs.tex
@@ -647,7 +647,7 @@ All we need to do is turn it into a sequent and start with this as the desired c
       {\linfer[assignb]
         {\linfer[assignb]
           {\linfer
-            {\linfer[qear]
+            {\linfer[\mathbb{Z}]
               {\lclose}
               {\lsequent{x{=}a\land y{=}b} {y=b\land x=a}}
             }
